--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@ body {
 <body>
 
 <!-- Flores y corazones decorativos -->
-<img src="flor.png" class="decor f1">
-<img src="corazon.png" class="decor f2">
-<img src="flor.png" class="decor f3">
-<img src="corazon.png" class="decor f4">
+<img src="./flor.png" class="decor f1">
+<img src="./corazon.png" class="decor f2">
+<img src="./flor.png" class="decor f3">
+<img src="./corazon.png" class="decor f4">
 
 <a href="mi cartita de amor para ti.pdf" download>
     <button class="download-btn">
