--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Descargar PDF</title>
+<title>Mi cartita de amor</title>
 
 <style>
 body {
@@ -42,10 +42,10 @@ body {
     opacity: 0.8;
 }
 
-.f1 { top: 5%; left: 5%; }
-.f2 { top: 10%; right: 8%; }
-.f3 { bottom: 10%; left: 8%; }
-.f4 { bottom: 5%; right: 5%; }
+.f1 { top: 10%; left: 10%; }
+.f2 { top: 20%; right: 18%; }
+.f3 { bottom: 20%; left: 18%; }
+.f4 { bottom: 10%; right: 10%; }
 
 </style>
 </head>
@@ -60,7 +60,7 @@ body {
 
 <a href="mi cartita de amor para ti.pdf" download>
     <button class="download-btn">
-        💖 Descarga mi cartita, amor 💖
+        Descarga esta cartita, mi amor 💕
     </button>
 </a>
 
