--- a/index.html
+++ b/index.html
@@ -6,28 +6,42 @@
 <title>Mi cartita de amor</title>
 
 <style>
-body {
+
+/* Reset importante */
+* {
     margin: 0;
-    height: 100vh;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
+    width: 100%;
+    overflow-x: hidden; /* elimina desplazamiento lateral */
+}
+
+body {
+    min-height: 100dvh; /* mejor que 100vh en móviles */
     background: linear-gradient(135deg, #ffe6f0, #fff0f5);
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: Arial, sans-serif;
-    overflow: hidden;
+    position: relative;
 }
 
 /* Botón central */
 .download-btn {
-    padding: 20px 40px;
-    font-size: 20px;
+    display: inline-block;
+    padding: 18px 32px;
+    font-size: 18px;
     background-color: #ff4d88;
     color: white;
-    border: none;
     border-radius: 50px;
-    cursor: pointer;
+    text-decoration: none;
+    text-align: center;
     box-shadow: 0 8px 20px rgba(0,0,0,0.2);
     transition: 0.3s;
+    max-width: 90vw; /* evita que se desborde */
 }
 
 .download-btn:hover {
@@ -37,27 +51,25 @@ body {
 
 /* Decoraciones */
 .decor {
-    position: absolute;
-    width: 100px;
+    width: clamp(50px, 15vw, 90px);
     opacity: 0.8;
 }
 
-/* Contenedores para alinear pares */
+/* Contenedores */
 .pair {
     position: absolute;
     display: flex;
     align-items: center;
-    gap: 10px;
-    width: auto;
+    gap: 8px;
 }
 
-/* Pares ubicados */
-.p1 { top: 10%; left: 10%; }
-.p2 { top: 10%; right: 10%; }
-.p3 { bottom: 10%; left: 10%; }
-.p4 { bottom: 10%; right: 10%; }
+/* Posiciones */
+.p1 { top: 6%; left: 6%; }
+.p2 { top: 6%; right: 6%; }
+.p3 { bottom: 6%; left: 6%; }
+.p4 { bottom: 6%; right: 6%; }
 
-/* Animación suave */
+/* Animación */
 @keyframes float {
     0% { transform: translateY(0px); }
     50% { transform: translateY(-8px); }
@@ -67,37 +79,13 @@ body {
 .pair img {
     animation: float 6s ease-in-out infinite;
 }
-    
-/* Ajustes para celulares (pantalla ≤ 480px) */
-@media (max-width: 480px) {
-  /* Reducir tamaño de imágenes decorativas */
-  .decor {
-    width: clamp(50px, 15vw, 80px);
-  }
 
-  /* Reducir la separación entre pares y acercarlos al borde */
-  .p1 { top: 6%; left: 6%; }
-  .p2 { top: 6%; right: 6%; }
-  .p3 { bottom: 6%; left: 6%; }
-  .p4 { bottom: 6%; right: 6%; }
-
-  /* Reducir tamaño y padding del botón central */
-  .download-btn {
-    font-size: 16px;
-    padding: 14px 28px;
-  }
-
-  /* Reducir espacio entre flor y corazón */
-  .pair {
-    gap: 6px;
-  }
-}
 </style>
 </head>
 
 <body>
 
-<!-- Pares de flores y corazones -->
+<!-- Decoraciones -->
 <div class="pair p1">
   <img src="./flor.png" class="decor">
   <img src="./corazon.png" class="decor">
@@ -118,10 +106,9 @@ body {
   <img src="./corazon.png" class="decor">
 </div>
 
-<a href="mi cartita de amor para ti.pdf" download>
-    <button class="download-btn">
-        Descarga esta cartita, mi amor 💕
-    </button>
+<!-- Botón -->
+<a href="mi cartita de amor para ti.pdf" download class="download-btn">
+    Descarga esta cartita, mi amor 💕
 </a>
 
 </body>
